test/constBlockAssign.slq

def main(){
	x:=0:int[2];
	for i in 0..2{ x[i]:=H(x[i]); }
	if x!=0{
		x-=3; /// error
	}
	return x;
}
